<resources>
    <string name="app_name">Distance Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles" translatable="false">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values" translatable="false">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles" translatable="false">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values" translatable="false">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>

    <!-- Values for meter -->
    <string name="pref_title_meters_steps">Steps in meter when click in volume</string>
    <string name="button_reset">Reset</string>
    <string name="menu_start_listening">Start/Resume Trip</string>
    <string name="menu_stop_listening">Pause Trip</string>
    <string name="messages_GPS_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="pref_enable_log">Enable Log</string>
    <string name="pref_enable_log_summary">Enable logs in the main window to see what is happening.</string>
    <string name="pref_keep_gps">Keep GPS enabled when background</string>
    <string name="pref_keep_gps_summary">Keep the gps enabled even when the app is in background.</string>
    <string name="pref_enable_track_summary">Enable tracking to kml file.</string>
    <string name="pref_enable_track">Enable track to KML - Beta</string>
    <string name="pref_control_types_desc">Choose how is the incrementation</string>
    <string name="pref_use_miles">Use Miles</string>
    <string name="pref_use_miles_summary">Visualize distance in Miles</string>
    <string name="pref_speedLabel_miles">mph</string>
    <string name="pref_distanceLabel_miles">mi</string>
    <string name="pref_speedLabel_kilometres">km/h</string>
    <string name="pref_distanceLabel_kilometres">km</string>
    <string name="revers">Reverse</string>
    <string name="forward">Forward</string>
    <string-array name="pref_meters_steps_titles" translatable="false">
        <item>100 meters</item>
        <item>200 meters</item>
        <item>300 meters</item>
        <item>400 meters</item>
        <item>500 meters</item>
        <item>700 meters</item>
        <item>800 meters</item>
        <item>900 meters</item>
        <item>1 kilometer</item>
        <item>1.5 kilometer</item>
        <item>2 kilometer</item>
        <item>5 kilometer</item>
    </string-array>
    <string-array name="pref_meters_steps_values" translatable="false">
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
        <item>5000</item>
    </string-array>
    <string-array name="pref_control_types_titles">
        <item>By volume keys</item>
        <item>By media next-previous keys</item>
    </string-array>


</resources>
