<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="enable_log"
        android:summary="@string/pref_enable_log_summary"
        android:title="@string/pref_enable_log" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="keep_enable_gps_when_background"
        android:summary="@string/pref_keep_gps_summary"
        android:title="@string/pref_keep_gps" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="enable_track"
        android:summary="@string/pref_enable_track_summary"
        android:title="@string/pref_enable_track" />

    <MultiSelectListPreference
        android:defaultValue="@array/pref_control_types_default_values"
        android:entries="@array/pref_control_types_titles"
        android:entryValues="@array/pref_control_types_values"
        android:key="increment_types"
        android:title="@string/pref_control_types_desc" />
    <ListPreference
        android:defaultValue="100"
        android:entries="@array/pref_meters_steps_titles"
        android:entryValues="@array/pref_meters_steps_values"
        android:key="meters_steps"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="%s"
        android:title="@string/pref_title_meters_steps" />
</PreferenceScreen>
