<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DistanceActivity">
    <item android:id="@+id/menuStartListening"
        android:title="@string/menu_start_listening"
        android:onClick="onStartListening"
        android:icon="@android:drawable/ic_menu_mapmode"  />
    <item android:id="@+id/menuStopListening"
        android:title="@string/menu_stop_listening"
        android:onClick="onStopListening"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"  />
    <item
        android:id="@+id/menuSettings"
        android:title="@string/title_activity_settings"
        android:onClick="onSettings"
        android:icon="@android:drawable/ic_menu_preferences"  />
    <item android:id="@+id/menuExit"
        android:showAsAction="always"
        android:title="Exit"
        android:onClick="onExit"
        android:icon="@android:drawable/ic_lock_power_off"/>
</menu>
